Core/objects/Recommended_Badge_Mix__c/Recommended_Badge_Mix__c.object-meta.xml
<CustomObject>
    <label>Recommended Badge Mix</label>
    <nameField>
        <label>Mix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recommended Badge Mixes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>