Core/objects/Recommended_Badge_Mix__c/fields/Default_Badge_Mix__c.field-meta.xml
<CustomField>
    <fullName>Default_Badge_Mix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Badge Mix</label>
    <type>Checkbox</type>
</CustomField>