Core/objects/Recommended_Badge_Mix__c/fields/ExamMix__c.field-meta.xml
<CustomField>
    <fullName>ExamMix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exam Mix</label>
    <type>Checkbox</type>
</CustomField>