Core/objects/Recommended_Badge_Mix__c/fields/Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Last Updated Date</label>
    <type>Date</type>
</CustomField>