Core/objects/Recommended_Badge_Mix__c/fields/OfficialPracticeExam__c.field-meta.xml
<CustomField>
    <fullName>OfficialPracticeExam__c</fullName>
    <description>URL to official practice exam on Trailhead. Only applicable for exam badge mixes.</description>
    <label>Official Practice Exam</label>
    <type>Url</type>
</CustomField>