Core/objects/Recommended_Badge_Mix__c/fields/OwnerID__c.field-meta.xml
<CustomField>
    <fullName>OwnerID__c</fullName>
    <description>Formula field to hold owner ID for reference in matching rules.</description>
    <label>Owner ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>