Core/objects/Recommended_Badge_Mix__c/fields/Private_Mix__c.field-meta.xml
<CustomField>
    <fullName>Private_Mix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Mix</label>
    <type>Checkbox</type>
</CustomField>