Core/objects/Recommended_Badge_Mix__c/recordTypes/Exam.recordType-meta.xml
<RecordType>
    <fullName>Exam</fullName>
    <active>true</active>
    <description>Record type for certification exam-specific badge mixes.</description>
    <label>Exam</label>
</RecordType>