Core/objects/Recommended_Badge_Mix__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>Record type for badge mixes that aren&apos;t certification exam-specific.</description>
    <label>Standard</label>
</RecordType>